# edegpredict-engine-rotary

./: CMakeLists.txt  drill_DE10.json  input_DE10.json  input_DE10_standard.json  result_de10.txt
docs/: EdgePredict_Divisions.md  Future_Advancement_Roadmap.md  ML_Surrogate_Model_Design.md  Product_Vision.md  analysis_results.md  implementation_plan.md
include/: AdiabaticShearModel.cuh  BUEModel.h  BoringStrategy.h  CFDSolverGPU.cuh  ChatterDynamics.h  Config.h  ContactSolver.cuh  CoolantHardeningModel.h  CoordinateSystem.h  CudaUtils.cuh  DeviceCoupling.h  DrillingStrategy.h  EdgeSubgridModel.h  FEMSolver.cuh  GCodeInterpreter.h  GeometryLoader.h  HDF5Exporter.h  IMachiningStrategy.h  IPhysicsSolver.h  MPMSolver.cuh  MPMWorkpieceSolver.cuh  MaterialModels.h  MillingStrategy.h  ReamingStrategy.h  ResidualStressAnalyzer.h  SPHSolver.cuh  SharedSpatialHash.h  SimulationEngine.h  SimulationHealthMonitor.h  StdoutIPCExporter.h  SurfaceReconstructor.h  SurfaceRoughnessPredictor.h  ThreadingStrategy.h  ToolCoatingModel.cuh  ToolRNDAnalyzer.h  ToolRegionClassifier.h  ToolSDF.h  Types.h  VTKExporter.h  json.hpp
src/: AdiabaticShearModel.cu  BUEModel.cpp  BoringStrategy.cpp  CFDSolverGPU.cu  ChatterDynamics.cpp  Config.cpp  ContactSolver.cu  CoolantHardeningModel.cpp  DrillingStrategy.cpp  EdgeSubgridModel.cpp  FEMSolver.cu  GCodeInterpreter.cpp  GeometryLoader.cpp  HDF5Exporter.cpp  MPMSolver.cu  MPMWorkpieceSolver.cu  MachiningStrategyFactory.cpp  MillingStrategy.cpp  OptimizationManager.cpp  ReamingStrategy.cpp  ResidualStressAnalyzer.cpp  SPHSolver.cu  SharedSpatialHash.cu  SimulationEngine.cpp  StdoutIPCExporter.cpp  SurfaceReconstructor.cpp  SurfaceRoughnessPredictor.cpp  ThreadingStrategy.cpp  ToolCoatingModel.cu  ToolRNDAnalyzer.cpp  ToolRegionClassifier.cpp  ToolSDF.cu  VTKExporter.cpp  main.cpp
